k8s/workloads/servarr/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      nodeSelector:
        platform.io/type: secondary
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 7878
          volumeMounts:
            - name: data
              mountPath: /data/media
            - name: config
              mountPath: /config
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  labels:
    app: sonarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      nodeSelector:
        platform.io/type: secondary
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8989
          volumeMounts:
            - name: data
              mountPath: /data/media
            - name: config
              mountPath: /config
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  labels:
    app: prowlarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
      annotations:
        # bypass Cilium's eBPF datapath for VPN traffic
        io.cilium.no-track-port: "9696,8191"
        io.cilium.proxy-visibility: "<Ingress/9696/TCP>,<Ingress/8191/TCP>"
    spec:
      nodeSelector:
        platform.io/type: main
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: data
              mountPath: /data/media
            - name: config
              mountPath: /config
        - name: flaresolverr
          image: ghcr.io/flaresolverr/flaresolverr:latest
          imagePullPolicy: IfNotPresent
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  labels:
    app: bazarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      nodeSelector:
        platform.io/type: pi
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6767
          volumeMounts:
            - name: data
              mountPath: /data/media
            - name: config
              mountPath: /config
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: data-pvc
        - name: config
          persistentVolumeClaim:
            claimName: bazarr-config-pvc
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: monitarr
  labels:
    app: monitarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: monitarr
  template:
    metadata:
      labels:
        app: monitarr
    spec:
      nodeSelector:
        platform.io/type: main
      containers:
        - name: monitarr
          image: ghcr.io/nickshanks347/monitarr:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
