k8s/workloads/servarr/ingress-routes.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: servarr
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`radarr.remini.site`)
      kind: Rule
      services:
        - name: radarr
          port: 7878
    - match: Host(`prowlarr.remini.site`)
      kind: Rule
      services:
        - name: prowlarr
          port: 9696
    - match: Host(`sonarr.remini.site`)
      kind: Rule
      services:
        - name: sonarr
          port: 8989
    - match: Host(`bazarr.remini.site`)
      kind: Rule
      services:
        - name: bazarr
          port: 6767
    - match: Host(`monitarr.remini.site`)
      kind: Rule
      services:
        - name: monitarr
          port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitarr-ts
  annotations:
    tailscale.com/hostname: monitarr
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitarr
                port:
                  number: 80
  tls:
    - hosts:
        - monitarr
